# Quantum-Synthesizer

./: .gitignore  4bitqc.py  README.markdown  __gc__.py  interface.py  main.py  pyproject.toml  show_sturct.py  synergy.py
qsyn/: __init__.py  data_exporter.py  synthesis.py  visual_engine.py
src/: ..env.swp  Input_loader.py  input_op.py  syn_generator.py
