[project]
name = "quantum-gan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "google-genai>=1.28.0",
    "gradio>=5.39.0",
    "groq>=0.30.0",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "qiskit>=2.1.1",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "stable-baselines3>=2.7.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
